--- a/client/src/css/index/topBox.css
+++ b/client/src/css/index/topBox.css
@@ -30,26 +30,36 @@
 }
 .topBanner {
     width: 100%;
-    background-color: #64b5f6;
+    background-color: #2196f3;
     color: white;
-    padding: 15px 0;
+    padding: 0px;
 }
 .topBannerText {
-    max-width: 1100px;
+    max-width: 650px;
     margin: 0 auto;
 }
 .topBannerText ul {
     margin-bottom: 0;
+    width: 100%;
+    padding-left: 0;
+
 }
 .topBannerText ul li {
-    display: inline;
-    padding-right: 5%;
-    text-align: justify;
+    display: inline-block;
+    width: 25%;
+    text-align: center;
+    padding: 15px 0;
+    transition: .4s;
+}
+.topBannerText ul li:hover {
+    background-color: #1e88e5;
+    text-decoration: none;
 }
 .topBannerText ul li a {
     color: white;
     font-size: 1.2em;
     font-weight: 400;
+    text-decoration: none;
     font-family: 'Helvetica Neue', sans-serif, 'Microsoft YaHei', 'Hiragino Sans GB';
 }
 .CTABox {
